--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <button type="button" class="btn btn-primary">Blue</button>
+    <button type="button" class="btn btn-danger">Red</button>
   </body>
 </html>
