--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h1>nanarina</h1>
     <button type="button" class="btn btn-primary">Blue</button>
     <button type="button" class="btn btn-danger">Red</button>
+    <button type="button" class="btn btn-reset">Yellow</button>
+
   </body>
 </html>
