--- a/index.html
+++ b/index.html
@@ -15,5 +15,16 @@
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
 
+    <form>
+      <div class="form-group">
+        <label for="formGroupExampleInput">Example label</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+      </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Another label</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+      </div>
+    </form>
+
   </body>
 </html>
