--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
   </head>
   <body>
-    <h1>nanarina</h1>
+      <div class="jumbotron">
+          <div class="container-fluid">
+              <h1>Cemal Can Dinça</h1>
+              <p><a class="btn btn-primary btn-lg" href="#" role="button">CONTACT ME</a></p>
+          </div>
+      </div>
     <button type="button" class="btn btn-primary">Blue</button>
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
