--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
       <div class="jumbotron">
           <div class="container-fluid">
-              <h1>Cemal Can Dinça</h1>
+              <h1>Nana Rina</h1>
               <p><a class="btn btn-primary btn-lg" href="#" role="button">CONTACT ME</a></p>
           </div>
       </div>
