--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button type="button" class="btn btn-primary">Blue</button>
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
-
+    <button type="button" class="btn btn-reset">blue</button>
     <form>
       <div class="form-group">
         <label for="formGroupExampleInput">Example label</label>
