--- a/index.html
+++ b/index.html
@@ -31,5 +31,59 @@
       </div>
     </form>
 
+    <div class="container-fluid">
+           <div class="row">
+               <div class="col-md-6">
+                   <div class="row">
+                       <div class="col-md-8">
+                           <div class="row">
+                               <div class="col-sm-3">
+                                   <span>1</span>
+                               </div>
+                               <div class="col-sm-3">
+                                   <span>2</Span>
+                               </div>
+                               <div class="col-sm-3">
+                                   <span>3</span>
+                               </div>
+                           </div>
+                       </div>
+                       <div class="col-md-4">
+                           <div class="row">
+                               <div class="col-md-8">
+                                   <span>1</span>
+                               </div>
+                               <div class="col-md-4">
+                                   <span>2</span>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+               <div class="col-md-6">
+                   <div class="row">
+                       <div class="col-xs-2">
+                           <span>1</span>
+                       </div>
+                       <div class="col-xs-2">
+                           <span>2</span>
+                       </div>
+                       <div class="col-xs-2">
+                           <span>3</span>
+                       </div>
+                       <div class="col-xs-2">
+                           <span>4</span>
+                       </div>
+                       <div class="col-xs-2">
+                           <span>5</span>
+                       </div>
+                       <div class="col-xs-2">
+                           <span>6</span>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+
   </body>
 </html>
