--- a/index.html
+++ b/index.html
@@ -29,6 +29,41 @@
         <label for="formGroupExampleInput2">Another label</label>
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
       </div>
+
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+                    <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+        </div>
+    </div>
+ 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+                    <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <i class="fa fa-heart"></i>
+            </div>
+        </div>
+    </div>
+
     </form>
 
 
