--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
     <button type="button" class="btn btn-reset">blue</button>
+    <button type="button" class="btn btn-reset">blue</button>
+    <button type="button" class="btn btn-reset">blue</button>
+
+    <button type="button" class="btn btn-default">Default</button>
+    <!-- Primary -->
+    <button type="button" class="btn btn-primary">Primary</button>
+    <!-- Success -->
+    <button type="button" class="btn btn-success">Success</button>
+    <!-- Info -->
+    <button type="button" class="btn btn-info">Info</button>
+    <!-- Warning -->
+    <button type="button" class="btn btn-warning">Warning</button>
+    <!-- Danger -->
+    <button type="button" class="btn btn-danger">Danger</button>
+    <!-- Link -->
+    <button type="button" class="btn btn-link">Link</button>
+
     <form>
       <div class="form-group">
         <label for="formGroupExampleInput">Example label</label>
