--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bootstrap Sample</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+    <script src= "main.js" ></script>
   </head>
   <body>
       <div class="jumbotron">
@@ -16,7 +16,7 @@
               <p><a class="btn btn-primary btn-lg" href="#" role="button">CONTACT ME</a></p>
           </div>
       </div>
-    <button type="button" class="btn btn-primary">Blue</button>
+    <button type="button" id= "AAA" class="btn btn-primary">Blue</button>
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
     <button type="button" class="btn btn-reset">blue</button>
