--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src= "main.js" ></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
   </head>
   <body>
       <div class="jumbotron">
@@ -37,51 +38,8 @@
     <!-- Link -->
     <button type="button" class="btn btn-link">Link</button>
 
-    <form>
-      <div class="form-group">
-        <label for="formGroupExampleInput">Example label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-      </div>
-      <div class="form-group">
-        <label for="formGroupExampleInput2">Another label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-      </div>
 
-      <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 col-sm-6">
-                <i class="fa fa-heart"></i>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <i class="fa fa-heart"></i>
-            </div>
-                    <div class="col-md-3 col-sm-6">
-                <i class="fa fa-heart"></i>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <i class="fa fa-heart"></i>
-            </div>
-        </div>
-    </div>
-
-    </form>
-
-    <div class="container-fluid">
-      <div class="row">
-          <div class="col-md-3 col-sm-6">
-              <i class="fa fa-heart"></i>
-          </div>
-          <div class="col-md-3 col-sm-6">
-              <i class="fa fa-heart"></i>
-          </div>
-                  <div class="col-md-3 col-sm-6">
-              <i class="fa fa-heart"></i>
-          </div>
-          <div class="col-md-3 col-sm-6">
-              <i class="fa fa-heart"></i>
-          </div>
-      </div>
-  </div>
+  <div id="map_div" style="width:320px; height: 480px;"></div>
 
   </body>
 </html>
