--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src= "main.js" ></script>
+    <script type="text/javascript" src="main.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
   </head>
   <body>
@@ -37,8 +36,6 @@
     <button type="button" class="btn btn-danger">Danger</button>
     <!-- Link -->
     <button type="button" class="btn btn-link">Link</button>
-
-
   <div id="map_div" style="width:320px; height: 480px;"></div>
 
   </body>
