--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <p><a class="btn btn-primary btn-lg" href="#" role="button">CONTACT ME</a></p>
           </div>
       </div>
-    <button type="button" id= "AAA" class="btn btn-primary">Blue</button>
+    <button type="button" id= "btn-blue" class="btn btn-primary" onclick="btn-blueClick();" >Blue</button>
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
     <button type="button" class="btn btn-reset">blue</button>
