--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
               <p><a class="btn btn-primary btn-lg" href="#" role="button">CONTACT ME</a></p>
           </div>
       </div>
+    <div id="text-button"><p id="text">クリック</p></div>  
     <button type="button" id= "btn-blue" class="btn btn-primary" onclick="btn-blueClick();" >Blue</button>
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
