--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
       </div>
     <div id="text-button"><p id="text">クリック</p></div>  
-    <button type="button" id= "btn-blue" class="btn btn-primary" onclick="btn-blueClick();" >Blue</button>
+    <button type="button" id= "btn-blue" class="btn btn-primary" onclick="btn-blueClick()" >Blue</button>
     <button type="button" class="btn btn-danger">Red</button>
     <button type="button" class="btn btn-reset">Yellow</button>
     <button type="button" class="btn btn-reset">blue</button>
